--- a/index.html
+++ b/index.html
@@ -1,1 +1,76 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Privacy Policy</title>
+</head>
+<body>
+    <h1>Privacy Policy for Meta Ads Library Tool</h1>
+    <p><strong>Last Updated:</strong> 2025-11-24</p>
+
+    <h2>1. Overview</h2>
+    <p>
+        This Privacy Policy describes how this application (“the App”) handles data when accessing Meta’s 
+        Ads Library API. The App retrieves publicly available ad transparency data only.
+        <br><br>
+        <strong>No personal data is collected, stored, or processed by this App.</strong>
+    </p>
+
+    <h2>2. Information We Collect</h2>
+    <p>
+        The App does <strong>not</strong> collect any personally identifiable information.
+        The only data accessed comes directly from the Meta Ads Library API and includes:
+    </p>
+    <ul>
+        <li>Ad creative text and media information</li>
+        <li>Page name and advertiser information</li>
+        <li>Ad delivery start and stop dates</li>
+        <li>Ad spend ranges (if provided publicly by Meta)</li>
+        <li>Targeting categories (public transparency fields)</li>
+    </ul>
+    <p>
+        All data retrieved is public information provided by Meta for transparency purposes.
+    </p>
+
+    <h2>3. How We Use This Data</h2>
+    <p>
+        Public ad transparency data is used solely for:
+    </p>
+    <ul>
+        <li>Monitoring advertiser activity</li>
+        <li>Research and analysis</li>
+        <li>Reporting on marketing trends</li>
+        <li>Competitive intelligence</li>
+    </ul>
+    <p>
+        No user profiles are created, and no personal data is processed.
+    </p>
+
+    <h2>4. Data Sharing</h2>
+    <p>
+        We do <strong>not</strong> sell, share, or transfer any data to third parties.
+        All data remains within the App and is used only for analysis.
+    </p>
+
+    <h2>5. Data Storage</h2>
+    <p>
+        No personal or private user data is stored.
+        Any technical logs generated during operation contain no personal information
+        and are automatically deleted periodically.
+    </p>
+
+    <h2>6. User Rights</h2>
+    <p>
+        As no personal data is collected, there is no user information to access, correct, or delete.
+        If you have any questions, you may contact us at:
+    </p>
+
+    <p><strong>Email:</strong> your-email-here</p>
+
+    <h2>7. Updates to This Privacy Policy</h2>
+    <p>
+        We may update this policy from time to time. The latest version will always be available at this URL.
+    </p>
+</body>
+</html>
 
